.91 Show letters in anagram/bank order

--- a/future.html
+++ b/future.html
@@ -63,7 +63,9 @@
     <LI><A HREF="http://wordsmith.org/anagram/index.html">IAS</A> (done)
     <LI><A HREF="http://stufffromhell.com/dmitri">Ask dmitri</A> <i>started; query out to developer</i>
   </OL>
-  <LI>0.91 Show letters in anagram/bank order (with links); test with "Upper Bank" query
+  <LI>0.91 Show letters in anagram/bank order (with links)
+<!-- search.php; _blank -->
+<!-- $security & urlencode -->
   <LI>0.92 Links
     <OL type=a>
     <LI>suppress
@@ -79,7 +81,7 @@
   <LI>0.94 Number of answers per page
   <LI>0.95 Show subwords, weights, etc. with tabular option
   <LI>0.96 Answers in anagram, bank, length, subword, weight, popularity [# incoming links] order
-  <LI>0.97 Force upper/lower case
+  <LI>0.97 Force upper/lower case (separately for alphagrams & answer)
   <LI>0.98 Choice of fonts
   <LI>0.99 Multiple hits per line
   <LI>0.9A Use italics, bold, color (F & B), font to differentiate corpuses, flags, & stuff from .95
