.92a Link options front end

--- a/future.html
+++ b/future.html
@@ -63,11 +63,9 @@
     <LI><A HREF="http://wordsmith.org/anagram/index.html">IAS</A> (done)
     <LI><A HREF="http://stufffromhell.com/dmitri">Ask dmitri</A> <i>started; query out to developer</i>
   </OL>
-  <LI>0.91 Show letters in anagram/bank order (with links)
-<!-- search.php; _blank -->
-<!-- $security & urlencode -->
+  <LI>0.91 Show letters in anagram/bank order (with links) (done)
   <LI>0.92 Links
-    <OL type=a>
+    <OL type=i>
     <LI>suppress
     <LI>source
     <LI>Google
@@ -76,6 +74,12 @@
     <LI>nGram viewer
     <LI>IMDB
     <LI>custom
+    </OL>
+    <OL type=a>
+    <LI>Front end (done)
+    <LI>Back end
+    <LI>Apply to phrases
+    <LI>Restore on reload
     </OL>
   <LI>0.93 Display letters only
   <LI>0.94 Number of answers per page
