.92bc Link options back end and phrases

--- a/future.html
+++ b/future.html
@@ -77,9 +77,10 @@
     </OL>
     <OL type=a>
     <LI>Front end (done)
-    <LI>Back end
-    <LI>Apply to phrases
+    <LI>Back end (done)
+    <LI>Apply to phrases (done)
     <LI>Restore on reload
+    <LI>Validate custom
     </OL>
   <LI>0.93 Display letters only
   <LI>0.94 Number of answers per page
