.92 Link choices on matches

--- a/future.html
+++ b/future.html
@@ -79,8 +79,8 @@
     <LI>Front end (done)
     <LI>Back end (done)
     <LI>Apply to phrases (done)
-    <LI>Restore on reload
-    <LI>Validate custom
+    <LI>Restore on reload (done)
+    <LI>Validate custom (done)
     </OL>
   <LI>0.93 Display letters only
   <LI>0.94 Number of answers per page
