.94 Number of answers per page

--- a/future.html
+++ b/future.html
@@ -73,14 +73,14 @@
     <LI>Yahoo
     <LI>nGram viewer
     <LI>IMDB
-    <LI>custom
+    <LI>custom (all done)
     </OL>
-    <OL type=a>
-    <LI>Front end (done)
-    <LI>Back end (done)
-    <LI>Apply to phrases (done)
-    <LI>Restore on reload (done)
-    <LI>Validate custom (done)
+    <OL type=a> 
+    <LI>Front end
+    <LI>Back end
+    <LI>Apply to phrases
+    <LI>Restore on reload
+    <LI>Validate custom
     </OL>
   <LI>0.93 Display letters only
   <LI>0.94 Number of answers per page
