.95 Show subwords, weights, etc.

--- a/future.html
+++ b/future.html
@@ -82,9 +82,14 @@
     <LI>Restore on reload
     <LI>Validate custom
     </OL>
-  <LI>0.93 Display letters only
-  <LI>0.94 Number of answers per page
-  <LI>0.95 Show subwords, weights, etc. with tabular option
+  <LI>0.93 Display letters only (done)
+  <LI>0.94 Number of answers per page (done)
+  <LI>0.95 Show subwords, weights, etc.
+<!--
+Regular expressions in article content: not finding!  Look for c..v in juliana*; first should match
+git
+-->
+  <LI>0.95a Use table
   <LI>0.96 Answers in anagram, bank, length, subword, weight, popularity [# incoming links] order
   <LI>0.97 Force upper/lower case (separately for alphagrams & answer)
   <LI>0.98 Choice of fonts
@@ -209,6 +214,8 @@
 -->
 <H2>Restart downloads</H2>
 <UL>
+<LI>Find funny Z character in wyz* interpreted as wya and change it, then fix everything
+<LI>Change X̄ from Xu to X and fix
 <LI><A HREF="http://www.8wheels.org/wordsearch/addwikipedia.php?limit=500&classname=wiktionary&from=Plissees&corpus=3">resume uppercase Wiktionary</A>
 <LI><A HREF="http://www.8wheels.org/wordsearch/addwikipedia.php?limit=265&classname=wiktionary&from=antiliquor&corpus=3">resume lowercase Wiktionary</A>
 <LI>Fix some early Wikitionary capitalization (see Alex*, for example)
