.95a Use table for output

--- a/future.html
+++ b/future.html
@@ -85,10 +85,6 @@
   <LI>0.93 Display letters only (done)
   <LI>0.94 Number of answers per page (done)
   <LI>0.95 Show subwords, weights, etc.
-<!--
-Regular expressions in article content: not finding!  Look for c..v in juliana*; first should match
-git
--->
   <LI>0.95a Use table
   <LI>0.96 Answers in anagram, bank, length, subword, weight, popularity [# incoming links] order
   <LI>0.97 Force upper/lower case (separately for alphagrams & answer)
@@ -96,16 +92,21 @@ git
   <LI>0.99 Multiple hits per line
   <LI>0.9A Use italics, bold, color (F & B), font to differentiate corpuses, flags, & stuff from .95
   <LI>0.9B Show/hide output options (always hide for guests)
+  <LI>Release
+<!--
+No gooch in project or pushed
+-->
   </UL>
 <LI>0.A More projects
   <UL>
   <LI>0.A1 Break up long-running queries
   <LI>0.A2 Gooch
   <LI>0.A3 Source processing
-  <LI>0.A4 Filter on number of distinct letters
-  <LI>0.A5 Filter on instances of a particular letter or group or equal to another
-  <LI>0.A6 Instead of filtering, apply .9A
-  <LI>0.A7 Recursive queries on results
+  <LI>0.A4 Show results carried over from previous screen
+  <LI>0.A5 Filter on number of distinct letters
+  <LI>0.A6 Filter on instances of a particular letter or group or equal to another
+  <LI>0.A7 Instead of filtering, apply .9A
+  <LI>0.A8 Recursive queries on results
   </UL>
 <LI>1.0 Public release
 <UL>
