--- a/future.html
+++ b/future.html
@@ -84,14 +84,20 @@
     </OL>
   <LI>0.93 Display letters only (done)
   <LI>0.94 Number of answers per page (done)
-  <LI>0.95 Show subwords, weights, etc.
-  <LI>0.95a Use table
-  <LI>0.96 Answers in anagram, bank, length, subword, weight, popularity [# incoming links] order
+  <LI>0.95 Show subwords, weights, etc. (done)
+  <LI>0.95a Use table (done)
+  <LI>0.96 Answers in order of word, length, other columns
+<!--
+GIT
+-->
+  <LI>0.96a Remove Constraint not taking away Show details
+  <LI>0.96b Phrase list is blank
   <LI>0.97 Force upper/lower case (separately for alphagrams & answer)
   <LI>0.98 Choice of fonts
   <LI>0.99 Multiple hits per line
   <LI>0.9A Use italics, bold, color (F & B), font to differentiate corpuses, flags, & stuff from .95
   <LI>0.9B Show/hide output options (always hide for guests)
+  <LI>0.9C Reset on output options
   <LI>Release
 <!--
 No gooch in project or pushed
@@ -175,7 +181,6 @@ No gooch in project or pushed
 <LI>Text search on redirect pages
 <LI>Validating corpus criteria
 <LI>Signon to display message based on code
-<LI>After timeout, error message sometimes appears stating that the SQL server has gone away
 <LI>Find a way to avoid 500 errors
 <LI>"More" improvements
   <UL>
@@ -198,7 +203,7 @@ No gooch in project or pushed
 <LI>Logic (e.g., 1 & (2 or 3))
 <LI>Anagram substring (e.g., *{MORRIS}*)
 <LI>Access frequency map (e.g., 1122 11111112 111 for those three words and 11111222233 for Cornelius Crane Chase)
-<LI>Cache multiple pages
+<LI>Cache multiple pages & other values (https://www.php.net/manual/en/intro.wincache.php)
 <LI>Cumulate old results after [more]
 </LL>
 <!-- Release process
