--- a/future.html
+++ b/future.html
@@ -86,12 +86,8 @@
   <LI>0.94 Number of answers per page (done)
   <LI>0.95 Show subwords, weights, etc. (done)
   <LI>0.95a Use table (done)
-  <LI>0.96 Answers in order of word, length, other columns
-<!--
-GIT
--->
-  <LI>0.96a Remove Constraint not taking away Show details
-  <LI>0.96b Phrase list is blank
+  <LI>0.96 Answers in order of word, length, other columns (done)
+  <LI>0.96a Phrase list is blank
   <LI>0.97 Force upper/lower case (separately for alphagrams & answer)
   <LI>0.98 Choice of fonts
   <LI>0.99 Multiple hits per line
