--- a/future.html
+++ b/future.html
@@ -87,7 +87,9 @@
   <LI>0.95 Show subwords, weights, etc. (done)
   <LI>0.95a Use table (done)
   <LI>0.96 Answers in order of word, length, other columns (done)
-  <LI>0.96a Phrase list is blank
+  <LI>0.96a Phrase list is blank (done)
+  <LI>0.96b Table: multiple links should not start in new cells, not sorting correctly by bank, & other bugs
+  <LI>0.96c Reversed subwords not working (wrong length, and more)
   <LI>0.97 Force upper/lower case (separately for alphagrams & answer)
   <LI>0.98 Choice of fonts
   <LI>0.99 Multiple hits per line
