--- a/future.html
+++ b/future.html
@@ -88,7 +88,7 @@
   <LI>0.95a Use table (done)
   <LI>0.96 Answers in order of word, length, other columns (done)
   <LI>0.96a Phrase list is blank (done)
-  <LI>0.96b Table: multiple links should not start in new cells, not sorting correctly by bank, & other bugs
+  <LI>0.96b Table: multiple links should not start in new cells, not sorting correctly by bank, & other bugs (done)
   <LI>0.96c Reversed subwords not working (wrong length, and more)
   <LI>0.97 Force upper/lower case (separately for alphagrams & answer)
   <LI>0.98 Choice of fonts
@@ -96,6 +96,7 @@
   <LI>0.9A Use italics, bold, color (F & B), font to differentiate corpuses, flags, & stuff from .95
   <LI>0.9B Show/hide output options (always hide for guests)
   <LI>0.9C Reset on output options
+  <LI>0.9D Consolidate phrases from multiple corpora
   <LI>Release
 <!--
 No gooch in project or pushed
