--- a/future.html
+++ b/future.html
@@ -91,14 +91,14 @@
   <LI>0.96b Table: multiple links should not start in new cells, not sorting correctly by bank, & other bugs (done)
   <LI>0.96c Reversed subwords not working (wrong length, and more) (done)
   <LI>0.97 Force upper/lower case (separately for alphagrams & answer) (done)
-  <LI>0.98 Choice of fonts
-<!--
-Dummy font function
-Handle alpha & bank effectively with and without table
-Handle multiple details effectively with and without table
-Real font function
--->
+  <LI>0.98 Choice of fonts (done)
   <LI>0.99 Multiple hits per line
+<!--
+Checkbox
+Disable if any show details, L, or A [do this in UpdateSort]
+Support with flow using a blue |
+Support with tables (three columns)
+-->
   <LI>0.9A Use italics, bold, color (F & B), font to differentiate corpuses, flags, & stuff from .95
   <LI>0.9B Show/hide output options (always hide for guests)
   <LI>0.9C Reset on output options
