--- a/future.html
+++ b/future.html
@@ -92,13 +92,13 @@
   <LI>0.96c Reversed subwords not working (wrong length, and more) (done)
   <LI>0.97 Force upper/lower case (separately for alphagrams & answer) (done)
   <LI>0.98 Choice of fonts (done)
-  <LI>0.99 Multiple hits per line
+  <LI>0.99 Multiple hits per line (done)
+  <LI>0.99a favicon.ico to get it to stop bugging me (done)
+  <LI>0.99b Resolve failure ***
 <!--
-Checkbox
-Disable if any show details, L, or A [do this in UpdateSort]
-Support with flow using a blue |
-Support with tables (three columns)
+http://www.8wheels.org/wordsearch/searchdev.php?simple=off&pattern=andre*&count=1&sessionkey=-_m1lydo9%2Cw5&level=3&minlen=&maxlen=&single=on&phrase=on&corpus2=on&query2_1=act&radio2_1=category&wc2_type1=contains&details2_1=on&count2=1&c3cap=on&c3uncap=on&count3=0&c90cap=on&c90uncap=on&count90=0&morecbx=+corpus2+c2flagR+corpus3+c3flagR+c3flagF+c3cap_dc+c3uncap_dc+corpus90+c90flagR+c90flagF+c90cap_dc+c90uncap_dc+corpus91&linkoption=source&customlink=&usetable=on&pagelen=&sort1=cv2_1&desc1=on&sort2=word&font=N&fontname=&fontword=on&type=dev&version=
 -->
+  <LI>0.99c Break up showResults()
   <LI>0.9A Use italics, bold, color (F & B), font to differentiate corpuses, flags, & stuff from .95
   <LI>0.9B Show/hide output options (always hide for guests)
   <LI>0.9C Reset on output options
@@ -110,6 +110,8 @@ No gooch in project or pushed
   </UL>
 <LI>0.A More projects
   <UL>
+<!-- Consolidate duplication with bug list
+-->
   <LI>0.A1 Break up long-running queries
   <LI>0.A2 Gooch
   <LI>0.A3 Source processing
@@ -186,6 +188,7 @@ No gooch in project or pushed
 <LI>Text search on redirect pages
 <LI>Validating corpus criteria
 <LI>Signon to display message based on code
+<LI>Restore query after re-signon
 <LI>Find a way to avoid 500 errors
 <LI>"More" improvements
   <UL>
@@ -231,7 +234,7 @@ No gooch in project or pushed
 <LI><A HREF="http://www.8wheels.org/wordsearch/addwikipedia.php?limit=265&classname=wiktionary&from=antiliquor&corpus=3">resume lowercase Wiktionary</A>
 <LI>Fix some early Wikitionary capitalization (see Alex*, for example)
 <LI>Fill in categories for first 5M on Wikipedia
-<LI>Get special characters for them too
+<LI>Redo special characters for entire Wikipedia
 <LI>Modify addwikipedia to skip redirect from spelling error.
 <LI>Delete "Redirect from spelling error" on Wikipedia
 </UL>
