--- a/future.html
+++ b/future.html
@@ -94,11 +94,9 @@
   <LI>0.98 Choice of fonts (done)
   <LI>0.99 Multiple hits per line (done)
   <LI>0.99a favicon.ico to get it to stop bugging me (done)
-  <LI>0.99b Resolve failure ***
-<!--
-http://www.8wheels.org/wordsearch/searchdev.php?simple=off&pattern=andre*&count=1&sessionkey=-_m1lydo9%2Cw5&level=3&minlen=&maxlen=&single=on&phrase=on&corpus2=on&query2_1=act&radio2_1=category&wc2_type1=contains&details2_1=on&count2=1&c3cap=on&c3uncap=on&count3=0&c90cap=on&c90uncap=on&count90=0&morecbx=+corpus2+c2flagR+corpus3+c3flagR+c3flagF+c3cap_dc+c3uncap_dc+corpus90+c90flagR+c90flagF+c90cap_dc+c90uncap_dc+corpus91&linkoption=source&customlink=&usetable=on&pagelen=&sort1=cv2_1&desc1=on&sort2=word&font=N&fontname=&fontword=on&type=dev&version=
--->
+  <LI>0.99b Resolve failure with filtering (done)
   <LI>0.99c Break up showResults()
+  <LI>0.99d Check on deleting Show details on row delete & reset
   <LI>0.9A Use italics, bold, color (F & B), font to differentiate corpuses, flags, & stuff from .95
   <LI>0.9B Show/hide output options (always hide for guests)
   <LI>0.9C Reset on output options
