--- a/future.html
+++ b/future.html
@@ -95,7 +95,7 @@
   <LI>0.99 Multiple hits per line (done)
   <LI>0.99a favicon.ico to get it to stop bugging me (done)
   <LI>0.99b Resolve failure with filtering (done)
-  <LI>0.99c Break up showResults()
+  <LI>0.99c Break up showResults() (done)
   <LI>0.99d Check on deleting Show details on row delete & reset
   <LI>0.9A Use italics, bold, color (F & B), font to differentiate corpuses, flags, & stuff from .95
   <LI>0.9B Show/hide output options (always hide for guests)
