--- a/future.html
+++ b/future.html
@@ -97,18 +97,12 @@
   <LI>0.99b Resolve failure with filtering (done)
   <LI>0.99c Break up showResults() (done)
   <LI>0.99d Fix deletion of Show details on row delete (done)
-  <LI>0.9A Use italics, bold, underline, nonstrikeout, color (F & B), size to differentiate corpuses, flags, & stuff from .95
-<!--
-Allow for highlight instead of filter on corpus flag filter
-* Add entry.flags as column when there is any post format on a flag
-* Set info[F][flag]
--->
-  <LI>0.9B Sorting on DOMINION is random
-  <LI>0.9C Show/hide output options (always hide for guests)
-  <LI>0.9D Ensure that output options are retained
-  <LI>0.9E Reset on output options
-  <LI>0.9F Consolidate phrases from multiple corpora
-  <LI>0.9G Change <font> to span/style
+  <LI>0.9A Use italics, bold, underline, nonstrikeout, color (F & B), size to differentiate corpuses, flags, & stuff from .95 (done)
+  <LI>0.9B Show/hide output options (always hide for guests)
+  <LI>0.9C Ensure that output options are retained
+  <LI>0.9D Reset on output options
+  <LI>0.9E Consolidate phrases from multiple corpora
+  <LI>0.9F Change <font> to span/style
   <LI>Release
 <!--
 Tell everybody
