--- a/future.html
+++ b/future.html
@@ -98,7 +98,7 @@
   <LI>0.99c Break up showResults() (done)
   <LI>0.99d Fix deletion of Show details on row delete (done)
   <LI>0.9A Use italics, bold, underline, nonstrikeout, color (F & B), size to differentiate corpuses, flags, & stuff from .95 (done)
-  <LI>0.9B Show/hide output options (always hide for guests)
+  <LI>0.9B Show/hide output options (always hide for guests) (done)
   <LI>0.9C Ensure that output options are retained
   <LI>0.9D Reset on output options
   <LI>0.9E Consolidate phrases from multiple corpora
