--- a/future.html
+++ b/future.html
@@ -101,11 +101,10 @@
   <LI>0.9B Show/hide output options (always hide for guests) (done)
   <LI>0.9C Ensure that output options are retained (done)
   <LI>0.9D Reset on output options (done)
-<!--
-Not showing options on indexdev
-Shows sort as Dummy, probably because something else fails
--->
   <LI>0.9E Consolidate phrases from multiple corpora
+<!--
+Update phrases.php
+-->
   <LI>0.9F Change <font> to span/style
   <LI>Release
 <!--
