--- a/future.html
+++ b/future.html
@@ -101,11 +101,21 @@
   <LI>0.9B Show/hide output options (always hide for guests) (done)
   <LI>0.9C Ensure that output options are retained (done)
   <LI>0.9D Reset on output options (done)
-  <LI>0.9E Consolidate phrases from multiple corpora
-<!--
-Update phrases.php
--->
+  <LI>0.9E Consolidate phrases from multiple corpora (done)
   <LI>0.9F Change <font> to span/style
+<!--
+---------- RESULTSDEV.PHP
+<span style='color:X'>
+</span>
+		$output = "<font size=+1>$output</font>";
+			$output = "<font color='$more'>$output</font>";
+
+---------- UTILITYDEV.JS
+<span style='color:X'>
+</span>
+        newDiv.appendChild (newSpan (choiceID + 'tl', '<font size=+1>larger</font>&nbsp;'));
+        newDiv.appendChild (newSpan (choiceID + 'tcf', '<font color="blue">color</font>&nbsp;'));
+-->
   <LI>Release
 <!--
 Tell everybody
@@ -125,6 +135,7 @@ No gooch in project or pushed
   <LI>0.A6 Filter on instances of a particular letter or group or equal to another
   <LI>0.A7 More results with same letters
   <LI>0.A8 Recursive queries on results
+  <LI>0.A9 Extensibility via Lua
   </UL>
 <LI>1.0 Public release
 <UL>
