--- a/helpdev.html
+++ b/helpdev.html
@@ -26,7 +26,7 @@ Not box at the beginning of the line, it will allow only words which do
 not meet the criterion.  For example, if you check the box and use a
 regex of e, it will find only words with no letter E.  (You can also
 do this with a regex of ^[a-df-z]*$.)
-Normally, these searches are done against just the letters in the result.  For example, <i>Jos&eacute; M. Rodr&iacute;guez</i> would be considered as <font face=Courier>JOSEMRODRIGUEZ</font>.  If you check the Raw box, the original text would be searched.
+Normally, these searches are done against just the letters in the result.  For example, <i>Jos&eacute; M. Rodr&iacute;guez</i> would be considered as <samp>JOSEMRODRIGUEZ</samp>.  If you check the Raw box, the original text would be searched.
 <H4>Pattern</H5>
 You can also intersect with another pattern, using the same syntax as in
 the basic pattern field.  The Raw checkbox works the same way as described above.
@@ -67,11 +67,11 @@ The option allows you to specify a pattern of matching and nonmatching letters: 
 cryptogram for the other word.  For example, ELLISVILLE would match REENGINEER and ABCABC would match words such as
 ATLATL, BONBON, and TSETSE.  Use * to specify that the word has no matching letters.;
 <H4>Enumeration</H4>
-This option allows you to specify a pattern of word lengths and punctuation.  A simple example would be <font face=Courier>5 4</font>, to represent a five-letter word
+This option allows you to specify a pattern of word lengths and punctuation.  A simple example would be <kbd>5 4</kbd>, to represent a five-letter word
 followed by a four-letter word.  You can also use
-<B>#</B> to represent any digit (e.g., <font face=Courier>#### 3 3 4</font> would match <i>1776 and All That</i>),
-<B>'</B> and <B>-</B> (quote and hyphen) to represent themselves (<font face=Courier>6 2 '##</font> would match <i>Spirit of '76</i>),
-<B>*</B> to represent a word (sequence of letters) of any length (<font face=Courier>6 * 9</font> would match <i>Ludvig van Beethoven</i> or <i>George Albert Boulenger,</i>
+<B>#</B> to represent any digit (e.g., <kbd>#### 3 3 4</kbd> would match <i>1776 and All That</i>),
+<B>'</B> and <B>-</B> (quote and hyphen) to represent themselves (<kbd>6 2 '##</kbd> would match <i>Spirit of '76</i>),
+<B>*</B> to represent a word (sequence of letters) of any length (<kbd>6 * 9</kbd> would match <i>Ludvig van Beethoven</i> or <i>George Albert Boulenger,</i>
 or <B>?</B> to represent any punctuation mark other than quote and hyphen.
 Note that all Unicode quote-like and hyphen-like characters are interpreted as ordinary quotes and hyphens here.
 <H3>Other Filters</H4>
