--- a/helpmanagedev.html
+++ b/helpmanagedev.html
@@ -28,8 +28,8 @@ This allows you to delete a single word from a list.  There is currently no capa
 <H4>Properties</H4>
 This provides access to two special list properties.  One is the URL.  If the URL is filled in, then results which come from this list will have links to a page on the specified web site.  Use an at sign (@) to show where the result name would go in the URL.  For example, if you have a list of movies or actors, https://www.imdb.com/find?ref_=nv_sr_fn&q=@&s=all would provide a link to IMDB for each result.<P>
 You can also indicate that your list is based on Wiktionary or Wikipedia.  This would make the special features of the standard list (such as category searches) available for your list.
-<H4><font color=gray>Access Shared</font></H4>
-<H3><font color=gray>Queries</font></H3>
+<H4><span style='color:gray'>Access Shared</span></H4>
+<H3><span style='color:gray'>Queries</span></H3>
 <P>
 </BODY>
 </HTML>
