Fix various bugs in 0.9x

--- a/future.html
+++ b/future.html
@@ -102,30 +102,27 @@
   <LI>0.9C Ensure that output options are retained (done)
   <LI>0.9D Reset on output options (done)
   <LI>0.9E Consolidate phrases from multiple corpora (done)
-  <LI>0.9F Change <font> to span/style
-<!--
----------- RESULTSDEV.PHP
-<span style='color:X'>
-</span>
-		$output = "<font size=+1>$output</font>";
-			$output = "<font color='$more'>$output</font>";
-
----------- UTILITYDEV.JS
-<span style='color:X'>
-</span>
-        newDiv.appendChild (newSpan (choiceID + 'tl', '<font size=+1>larger</font>&nbsp;'));
-        newDiv.appendChild (newSpan (choiceID + 'tcf', '<font color="blue">color</font>&nbsp;'));
--->
+  <LI>0.9F Change <font> to span/style (done)
   <LI>Release
 <!--
-Tell everybody
-Tell Hunt Krewe
-No gooch in project or pushed
+* Test
+* Increment version number
+* vup; compare beta to dev
+* vup new stuff to beta
+* Look for 'dev' references in beta after vup
+* Copy everything to network (with hide)
+* Retest
+* pull back from temp
+* git push
+* Tell everyone (not just Eric Chaikin & Andy Latto unless .#0)
+* Tell everybody
+* Tell Hunt Krewe
+* No gooch in project or pushed
 -->
   </UL>
 <LI>0.A More projects
   <UL>
-<!-- Consolidate duplication with bug list
+<!-- Consolidate duplication with bug list & Ideas
 -->
   <LI>0.A1 Break up long-running queries
   <LI>0.A2 Gooch
@@ -239,8 +236,8 @@ No gooch in project or pushed
 * Look for 'dev' references in beta after vup
 * Copy everything to network (with hide)
 * Retest
-* git push
 * pull back from temp
+* git push
 * Tell everyone (just Eric Chaikin & Andy Latto unless .#0)
 -->
 <H2>Cleanup</H2>
